Some style changes

--- a/DesktopContactsApp/MainWindow.xaml
+++ b/DesktopContactsApp/MainWindow.xaml
@@ -13,6 +13,13 @@
             <TextBox Margin="0, 5, 0, 5" TextChanged="TextBox_TextChanged"/>
 
             <ListView x:Name="ContactsListView" Margin="0, 5, 0, 0" Height="280" SelectionChanged="ContactListView_SelectionChanged">
+                
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                    </Style>
+                </ListView.ItemContainerStyle>
+                
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <uc:ContactControl Contact="{Binding}"/>
