--- a/DesktopContactsApp/NewContactWindow.xaml
+++ b/DesktopContactsApp/NewContactWindow.xaml
@@ -8,8 +8,11 @@
         Title="NewContactWindow" Height="300" Width="300">
     <Grid>
         <StackPanel Margin="10">
+            <TextBlock Text="Name:"/>
             <TextBox x:Name="NameTextBox" Margin="0, 0, 0, 5"/>
+            <TextBlock Text="Email:"/>
             <TextBox x:Name="EmailTextBox" Margin="0, 0, 0, 5"/>
+            <TextBlock Text="Phone Number:"/>
             <TextBox x:Name="PhoneNumberTextBox" Margin="0, 0, 0, 5"/>
             <Button Content="Save" Click="SaveButton_Click"/>
 
