--- a/DesktopContactsApp/ContactDetailsWindow.xaml
+++ b/DesktopContactsApp/ContactDetailsWindow.xaml
@@ -4,12 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DesktopContactsApp"
-        mc:Ignorable="d" ResizeMode="NoResize"
+        mc:Ignorable="d" 
+        ResizeMode="NoResize"
         Title="ContactDetailsWindow" Height="300" Width="300">
     <Grid>
         <StackPanel Margin="10">
+            <TextBlock Text="Name:"/>
             <TextBox x:Name="NameTextBox" Margin="0, 0, 0, 5"/>
+            <TextBlock Text="Email:"/>
             <TextBox x:Name="EmailTextBox" Margin="0, 0, 0, 5"/>
+            <TextBlock Text="Phone Number:"/>
             <TextBox x:Name="PhoneNumberTextBox" Margin="0, 0, 0, 5"/>
             <Button Content="Update" Click="UpdateButton_Click" Margin="0, 0, 0, 5"/>
             <Button Content="Delete" Background="Red" Foreground="White" Click="DeleteButton_Click"/>
